--- a/src/realTest.html
+++ b/src/realTest.html
@@ -4,11 +4,39 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik One:400">    
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
         height: 80%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #input {
+
+      }
+      #button {
+        font-family: "Rubik One";    
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        justify-content: flex-start;
+        width: 88px;
+        transform: translate(900px, 0px);
+        /*color: rgb(158, 158, 158);
+        justify-content: flex-start;
+        width: 88px;
+        transform: translate(0px, 0px);
+        line-height: 23.4375px;
+        height: 19px;
+        left: 446px;
+        top: 33px;*/
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
