--- a/src/realTest.html
+++ b/src/realTest.html
@@ -22,13 +22,17 @@
       }
       #button {
         font-family: "Rubik One";    
-        font-size: 20px;
+        font-size: 25px;
         font-weight: 400;
         letter-spacing: 0px;
         vertical-align: middle;
         justify-content: flex-start;
-        width: 88px;
-        transform: translate(900px, 0px);
+        width: 125px;
+        transform: translate(400px, 0px);
+        background: rgb(129, 217, 255);
+        top: 483px; 
+        color: rgb(255, 255, 255);
+        height: 40px;
         /*color: rgb(158, 158, 158);
         justify-content: flex-start;
         width: 88px;
@@ -47,11 +51,13 @@
     </style>
   </head>
   <body>
+    <div id="location"></div>
+    <div id="rating"></div>
     <div id="map"></div>
     <div>
     <input id="input">
     <button id="button">
-      submit
+      SUBMIT
     </button>
     </div>
    
