--- a/src/realTest.html
+++ b/src/realTest.html
@@ -51,8 +51,12 @@
     </style>
   </head>
   <body>
-    <div id="location"></div>
-    <div id="rating"></div>
+    <div>
+      <input id="ratingInput">
+      <label id="ratingLabel">
+        RATING
+      </label>
+    </div>
     <div id="map"></div>
     <div>
     <input id="input">
@@ -72,9 +76,7 @@ function initMap() {
 var markers = [];
 var input = document.getElementById("input");
 var button = document.getElementById("button");
-var location = document.getElementById("location");
-var rating = document.getElementById("location");
-var location = document.getElementById("location");
+var rating = document.getElementById("ratingInput");
 
 button.addEventListener("click", function(){
   alert(input.value);
