--- a/src/realTest.html
+++ b/src/realTest.html
@@ -17,6 +17,22 @@
         margin: 0;
         padding: 0;
       }
+      #ratingLabel{
+        font-family: "Rubik One";
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 0px;
+        color: rgb(158, 158, 158);
+        vertical-align: middle;
+        justify-content: flex-start;
+        width: 88px;
+        transform: translate(400px, 0px);
+        line-height: 23.4375px;
+        height: 19px;
+        left: 446px;
+        top: 33px;
+
+      }
       #input {
 
       }
@@ -47,6 +63,7 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        background: #F1F1F1;
       }
     </style>
   </head>
