--- a/src/realTest.html
+++ b/src/realTest.html
@@ -10,6 +10,7 @@
        * element that contains the map. */
       #map {
         height: 80%;
+        margin-top: 50px;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
