--- a/src/realTest.html
+++ b/src/realTest.html
@@ -12,6 +12,15 @@
         height: 80%;
         margin-top: 50px;
       }
+
+      #fromInput {
+      }
+
+      #toInput {
+      }
+
+      #routeButton {
+      }
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
@@ -74,7 +83,23 @@
       <label id="ratingLabel">
         RATING
       </label>
+
+      <input id="fromInput">
+      <label>
+        FROM
+      </label>
+
+      <input id="toInput">
+      <label>
+        TO
+      </label>
+      <button id="routeButton">
+        FIND ROUTE
+      </button>
     </div>
+
+
+
     <div id="map"></div>
     <div>
     <input id="input">
