--- a/src/realTest.html
+++ b/src/realTest.html
@@ -11,6 +11,12 @@
       #map {
         height: 80%;
         margin-top: 50px;
+        margin-bottom: 20px;
+      }
+
+      #input {
+        width: 20%;
+        line-height: 40px;
       }
 
       #fromInput {
@@ -141,9 +147,12 @@
     <div id="map"></div>
     <div>
     <input id="input">
-    <button id="button">
-      SUBMIT
-    </button>
+      <label id="label">
+        RESPONSE
+      </label>
+      <button id="button">
+        SUBMIT
+      </button>
     </div>
    
     <script>
