--- a/src/realTest.html
+++ b/src/realTest.html
@@ -9,7 +9,8 @@
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 80%;
+        height: 65%;
+        width: 80%
         margin-top: 50px;
         margin-bottom: 20px;
       }
