--- a/src/realTest.html
+++ b/src/realTest.html
@@ -51,6 +51,23 @@
         top: 33px;
       }
 
+      #routeButton{
+        font-family: "Rubik One";
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 0px;
+        color: rgb(158, 158, 158);
+        vertical-align: middle;
+        justify-content: flex-start;
+        width: 88px;
+        transform: translate(400px, 0px);
+        line-height: 23.4375px;
+        height: 19px;
+        left: 446px;
+        top: 33px;
+
+      }
+
       #routeButton {
         font-family: "Rubik One";    
         font-size: 25px;
@@ -71,6 +88,7 @@
         margin: 0;
         padding: 0;
       }
+
       #ratingLabel{
         font-family: "Rubik One";
         font-size: 20px;
@@ -87,7 +105,20 @@
         top: 33px;
 
       }
-      #input {
+      #label {
+        font-family: "Rubik One";
+        font-size: 20px;
+        font-weight: 400;
+        letter-spacing: 0px;
+        color: rgb(158, 158, 158);
+        vertical-align: middle;
+        justify-content: flex-start;
+        width: 88px;
+        transform: translate(400px, 0px);
+        line-height: 23.4375px;
+        height: 19px;
+        left: 446px;
+        top: 33px;
 
       }
       #button {
